--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,9 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:contentDescription="@string/avatar"
-        app:srcCompat="@drawable/avatar0"
-        tools:srcCompat="@drawable/avatar0" />
+        app:srcCompat="@drawable/ic_logo_00"
+        tools:srcCompat="@drawable/ic_logo_00"
+        android:onClick="onSetAvatarButton"/>
 
     <TextView
         android:id="@+id/teamManagementLabel"
@@ -74,5 +75,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="center"
+        android:onClick="onOpenInGoogleMaps"
         android:text="@string/openInGoogleMaps" />
 </LinearLayout>
