--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,9 +19,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Select an avatar"
-            android:textSize="24sp" />
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Select an Avatar"
+            android:textSize="28dp" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -91,13 +94,18 @@
                 android:onClick="setTeamIcon"/>
         </GridLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:layout_weight="0.4"
         android:gravity="center"
         android:orientation="horizontal">
+
         <Button
+            android:id="@+id/load"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Load from phone"
